fix(backend): fixed radius
