# backend/docs/swagger.json
@@ -69,15 +69,11 @@
             "type": "object",
             "required": [
                 "destination_point",
-                "radius",
                 "source_point"
             ],
             "properties": {
                 "destination_point": {
                     "$ref": "#/definitions/models.Point"
-                },
-                "radius": {
-                    "type": "integer"
                 },
                 "source_point": {
                     "$ref": "#/definitions/models.Point"
